--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "app",
   "version": "0.1.0",
+  "homepage": "https://filipego.github.io/React-and-Css-Grid",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
