“Fixed_some_errors”

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://filipego.github.io/React-and-Css-Grid/",
+  "homepage": "https://filipego.github.io/React-and-Css-Grid",
   "name": "app",
   "version": "0.1.0",
   "private": true,
